--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,10 @@ jobs:
       run: npm install
 
     - name: Run Tests
-      run: npm test  
+      run: npm test
+
+    -name: Build image and push to Docker Hub
+      run: |
+        echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/api_gateway .
+        docker push ${{ secrets.DOCKER_USERNAME }}/api_gateway  
