--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.10.4",
     "@grpc/proto-loader": "^0.7.12",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "google-protobuf": "^3.21.2",
     "http-proxy-middleware": "^2.0.6",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
